add fetchHTML