@@ -5,51 +5,62 @@
  */
 package com.richie.nhdownloder.url;
 
-import java.net.URI;
+import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import org.jsoup.Jsoup;
+import org.jsoup.Connection.Response;
+import org.jsoup.nodes.Document;
 
 /**
  *
  * @author Richie-PC
  */
-public class FetchHtml {
+public class FetchHTML {
 
-    private static final String BASE_URL = "https://nhentai.net";
-    private static String targetUrl = null;
+    private String param;
+    private final String BASE_URL = "https://nhentai.net/g/";
+    private Response res;
 
-    public FetchHtml(String targetUrl) {
-        this.targetUrl = generateUrl(targetUrl);
+    public FetchHTML(String param) throws IOException {
+        this.param = param;
+        this.checkParameter();
     }
 
-    private static boolean isValidURL(String url) {
+    public void checkParameter() throws IOException {
+        this.isValidURL(this.isUrl(this.param) ? this.param : BASE_URL + this.param);
+    }
+
+    public Boolean isUrl(String url) {
         try {
-            new URI(url).parseServerAuthority();
+            new URL(url).toURI();
             return true;
-        } catch (URISyntaxException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             return false;
         }
     }
 
-    private static String generateUrl(String givenString) {
-        System.out.println(isValidURL(givenString));
-        if (isValidURL(givenString)) {
-            return givenString;
+    public int isValidURL(String url) {
+        try {
+            this.res = Jsoup.connect(url)
+                    .data("query", "Java")
+                    .userAgent("Mozilla")
+                    .cookie("auth", "token")
+                    .execute();
+        } catch (IOException ex) {
+            Logger.getLogger(FetchHTML.class.getName()).log(Level.SEVERE, null, ex);
         }
-        String onlyCode = checkGivenCode(givenString);
-        return onlyCode;
-
+        return this.res.statusCode();
     }
 
-    private static String checkGivenCode(String targetUrl) {
-        String onlyCode = null;
-        if (targetUrl.substring(0, 1).equals("#")) {
-            onlyCode = targetUrl.substring(1);
-        }
-        return onlyCode;
+    public Document main() throws IOException {
+        return this.res.parse();
     }
 
-    public static void main(String[] args) {
-        generateUrl("fgdfgfdg");
+    public static void main(String[] args) throws IOException {
+        FetchHTML fh = new FetchHTML("https://nhentai.net/g/1");
     }
-
 }
